# systematically-improving-rag

./: .gitignore  LICENSE  requirements.txt
bootstrap_evals/: .gitignore  README.md  make_product_reviews.ipynb  make_synthetic_data.ipynb  make_synthetic_questions.ipynb  make_synthetic_questions.py  metrics.ipynb  reviews.json  sample_synthetic_data.py  synthetic_eval_dataset.json
classification/: example.py  rag_classifer.py  readme.md  requirements.txt  yaml_classifier.py
classify_traffic/: analyze_clusters.ipynb  make_prod_questions.ipynb  prod_questions.json  question_types.py
cohort_1/: README.md
cohort_1/week1_bootstrap_evals/: make_product_reviews.ipynb  metrics.ipynb  reviews.json  synthetic_eval_dataset.json
cohort_2/week1/: 1. synthetic_questions.ipynb  2. benchmark_retrieval.ipynb  README.md  pyproject.toml  synthetic_questions.ipynb
week1_bootstrap_evals/: README.md  make_product_reviews.ipynb  make_synthetic_questions.ipynb  metrics.ipynb  relevancy_example.py  reviews.json  scoring_utils.py  synthetic_eval_dataset.json  synthetic_finetune_dataset.jsonl
week3_seperate_indices/: benchmark_tool_retrieval.ipynb  example_router.ipynb  requirements.txt  tool_creation.ipynb
week4_routing/: README.md  benchmark_tool_retrieval.ipynb  funcs_to_call.py
week5_cohere_fine_tuning/: README.md  cohere_fine_tuning.ipynb  ft_dataset.jsonl  make_synthetic_training_questions.ipynb
week5_fine_tuning/: README.md  cohere_fine_tuning.ipynb  eval_sbert.py  finetune_sbert.py  sbert.ipynb
week6_product/: streaming_examples.ipynb
(+18 files in other folders)
