[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "braintrust>=0.0.166",
    "datasets>=3.0.1",
    "instructor>=1.6.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lancedb>=0.14.0",
    "openai>=1.52.0",
]
